# brahma

./: Cargo.toml  fsm.rs  renderer.rs  メモ.md  参考資料.md  現状.md  目論見.md  計画.md
src/: main.rs  renderer.rs
src/shaders/: triangle.wgsl
